--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
-# github authorization
+server.port=8085
+
+# github client authorization
 spring.security.oauth2.client.registration.github.client-id=
 spring.security.oauth2.client.registration.github.client-secret=
+
+# keycloak client authorization
+spring.security.oauth2.client.registration.keycloak.client-id=spring-security-poc
+spring.security.oauth2.client.registration.keycloak.clientName=Keycloak
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/poc
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
